--- a/index.html
+++ b/index.html
@@ -8,11 +8,56 @@
     <title>Encantos Literários</title>
 
     <link rel="stylesheet" href="styles/index.css" />
-
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <nav>
+          <a class="mobile-only" href="#" title="Home">
+            <img
+              src="assets/logo-symbol.svg"
+              alt="Logo Encantos Litérarios"
+              height="48"
+            />
+          </a>
+          <a class="desktop-only" href="#" title="Home">
+            <img
+              src="assets/logo-horizontal.svg"
+              alt="Logo Encantos Literários"
+            />
+          </a>
+          <a href="#" class="button">Assinar</a>
+        </nav>
+
+        <div class="grid">
+          <h1>Desperte a sua imaginação e explore novos mundos</h1>
+          <p>
+            Junte-se ao clube de assinatura Encantos Literários e descubra
+            maravilhas e aventuras a cada página
+          </p>
+        </div>
+      </div>
+    </header>
+
+    <section id="img-animated">
+      <div>
+        <img
+          src="assets/mystery-opened-spellbook.png"
+          alt="Spell book opened"
+        />
+        <h3>
+          Receba todo mês um <strong>livro surpresa</strong> do seu tema
+          favorito, acompanhado de <strong>brindes exclusivos</strong> que
+          tornarão a sua experiência literária <strong>encantadora</strong>
+        </h3>
+        <img src="assets/mystery-ouija-planchette.png" alt="" />
+        <img src="assets/mystery-wand.svg" alt="" />
+        <img src="assets/mystery-crystal-ball.png" alt="Crystal ball" />
+      </div>
+    </section>
+  </body>
 </html>
