add header animation

--- a/index.html
+++ b/index.html
@@ -15,49 +15,55 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <nav>
-          <a class="mobile-only" href="#" title="Home">
-            <img
-              src="assets/logo-symbol.svg"
-              alt="Logo Encantos Litérarios"
-              height="48"
-            />
-          </a>
-          <a class="desktop-only" href="#" title="Home">
-            <img
-              src="assets/logo-horizontal.svg"
-              alt="Logo Encantos Literários"
-            />
-          </a>
-          <a href="#" class="button">Assinar</a>
-        </nav>
+      <div id="hero">
+        <div class="container">
+          <nav class="flex">
+            <a class="mobile-only" href="#" title="Home">
+              <img
+                src="assets/logo-symbol.svg"
+                alt="Logo Encantos Litérarios"
+                height="48"
+              />
+            </a>
+            <a class="desktop-only" href="#" title="Home">
+              <img
+                src="assets/logo-horizontal.svg"
+                alt="Logo Encantos Literários"
+              />
+            </a>
+            <a href="#" class="button">Assinar</a>
+          </nav>
 
-        <div class="grid">
-          <h1>Desperte a sua imaginação e explore novos mundos</h1>
-          <p>
-            Junte-se ao clube de assinatura Encantos Literários e descubra
-            maravilhas e aventuras a cada página
-          </p>
+          <div class="grid">
+            <h1>Desperte a sua imaginação e explore novos mundos</h1>
+            <p>
+              Junte-se ao clube de assinatura Encantos Literários e descubra
+              maravilhas e aventuras a cada página
+            </p>
+          </div>
         </div>
       </div>
-    </header>
-
-    <section id="img-animated">
-      <div>
+      <section id="imgs-animated" class="container">
         <img
           src="assets/mystery-opened-spellbook.png"
           alt="Spell book opened"
         />
         <h3>
-          Receba todo mês um <strong>livro surpresa</strong> do seu tema
-          favorito, acompanhado de <strong>brindes exclusivos</strong> que
-          tornarão a sua experiência literária <strong>encantadora</strong>
+          <span>Receba todo mês um <strong>livro surpresa</strong> </span>
+          <span>
+            do seu tema favorito, acompanhado de
+            <strong>brindes exclusivos</strong>
+          </span>
+          <span>
+            que tornarão a sua experiência literária
+            <strong>encantadora</strong>
+          </span>
         </h3>
-        <img src="assets/mystery-ouija-planchette.png" alt="" />
-        <img src="assets/mystery-wand.svg" alt="" />
-        <img src="assets/mystery-crystal-ball.png" alt="Crystal ball" />
-      </div>
-    </section>
+        <div class="flex">
+          <img src="assets/mystery-wand.svg" alt="" />
+          <img src="assets/mystery-crystal-ball.png" alt="Crystal ball" />
+        </div>
+      </section>
+    </header>
   </body>
 </html>
