add subscription section

--- a/index.html
+++ b/index.html
@@ -65,5 +65,64 @@
         </div>
       </section>
     </header>
+
+    <section id="book">
+      <div class="container">
+        <h2>Conheça o kit mensal</h2>
+        <p>Recebe uma caixa surpresa todos os meses</p>
+      </div>
+    </section>
+
+    <section id="subscriptions" class="container">
+      <h2>Assinatura Encantos Literários</h2>
+
+      <div class="cards flex">
+        <div class="card">
+          <h3>Mensal</h3>
+          <div class="price">
+            <p><strong>R$ 59,90</strong>/mês</p>
+            <small>R$ 718,80 por ano</small>
+          </div>
+          <ul role="list">
+            <li>Kit mensal com livro temático</li>
+            <li>Broche e marca páginas exclusivo</li>
+            <li>Acesso à comunidade literária</li>
+          </ul>
+          <a href="#" class="button">Assinar mensal</a>
+        </div>
+
+        <div class="card">
+          <img src="assets/bunny.svg" alt="" />
+          <h3>Semestral</h3>
+          <div class="price">
+            <p><strong>R$ 52,90</strong>/mês</p>
+            <small>R$ 634,80 por ano</small>
+          </div>
+          <ul role="list">
+            <li>Kit mensal com livro temático</li>
+            <li>Broche e marca páginas exclusivo</li>
+            <li>Acesso à comunidade literária</li>
+            <li>Membro premium do clube</li>
+          </ul>
+          <a href="#" class="button">Assinar semestral</a>
+        </div>
+
+        <div class="card">
+          <h3>Anual</h3>
+          <div class="price">
+            <p><strong>R$ 48,90</strong>/mês</p>
+            <small>R$ 568,80 por ano</small>
+          </div>
+          <ul role="list">
+            <li>Kit mensal com livro temático</li>
+            <li>Broche e marca páginas exclusivo</li>
+            <li>Acesso à comunidade literária</li>
+            <li>Membro premium do clube</li>
+            <li>Planner anual de leituras</li>
+          </ul>
+          <a href="#" class="button">Assinar anual</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
