add book animation to images

--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
       <div class="container">
         <h2>Conheça o kit mensal</h2>
         <p>Recebe uma caixa surpresa todos os meses</p>
+
+        <div class="book-kit">
+          <img src="assets/book-kit/book.png" alt="Livro O Castelo da Colina" />
+          <p>Capa dura</p>
+          <p>Broche exclusivo</p>
+          <img src="assets/book-kit/pin.png" alt="Pin" />
+          <img
+            src="assets/book-kit/bookmark-yellow.png"
+            alt="bookmark amarelo"
+          />
+          <img src="assets/book-kit/bookmark-purple.png" alt="bookmark roxo" />
+          <p>Marca páginas temático</p>
+        </div>
       </div>
     </section>
 
