add arrow and text in book section

--- a/index.html
+++ b/index.html
@@ -72,16 +72,18 @@
         <p>Recebe uma caixa surpresa todos os meses</p>
 
         <div class="book-kit">
+          <div class="text-wrapper">
+            <p class="top">Livro em capa dura</p>
+            <p class="middle">Broche exclusivo</p>
+            <p class="bottom">Marca páginas temático</p>
+          </div>
           <img src="assets/book-kit/book.png" alt="Livro O Castelo da Colina" />
-          <p>Capa dura</p>
-          <p>Broche exclusivo</p>
           <img src="assets/book-kit/pin.png" alt="Pin" />
           <img
             src="assets/book-kit/bookmark-yellow.png"
             alt="bookmark amarelo"
           />
           <img src="assets/book-kit/bookmark-purple.png" alt="bookmark roxo" />
-          <p>Marca páginas temático</p>
         </div>
       </div>
     </section>
